# dart-counter-reborn

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/lvgl_port/: CMakeLists.txt
components/ui/: CMakeLists.txt
components/ui/icons/: player_icon.c
components/ui/include/app_pages/: home_page.h
components/ui/include/style/: color.h  default.h
components/ui/src/app/: app.c
components/ui/src/style/: color.c
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  lvgl_v9_port.cpp  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/include/: lvgl_commons_light_import.h
main/include/app/: app.h  app_page_manager.h
main/include/style/: color.h  icon.h
main/src/app/: app.c  app_page_manager.c
main/src/app_pages/: home_page.c
main/src/style/: default.c  icon.c
tomorrow-folder/: time_sync.cpp  time_sync.hpp
